--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>AirBnB</title>
+		<title>AirBnB clone</title>
 	</head>
 	<body stype="margin:0; padding:0;">
 		<header style="background-color:#FF0000; height: 70px; width: 100%;">
