--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>AirBnB</title>
+		<title>AirBnB clone</title>
 		<style>
 		   header {background-color:#FF0000; height:70px; width:100%;}
 		   body {margin:0; padding:0;}
